[tool.poetry]
name = "XRTSCalib"
version = "0.1.0"
description = "A simple GUI tool for creating dispersion curves for your favorite spectrometer from a set of calibration spectra."
authors = ["Samuel Schumacher <samuel.schumacher@uni-rostock.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
matplotlib = "^3.7"
scipy = "^1.11"
SciencePlots = "^1.0"
pint = "^0.21"
setuptools = "^68.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=68.0"]
build-backend = "poetry.core.masonry.api"