[project]
name = "XRTSCalib"
version = "0.1.0"
description = "A simple GUI tool for creating dispersion curves for your favorite spectrometer from a set of calibration spectra."
authors = [
  { name = "Samuel Schumacher", email = "samuel.schumacher@uni-rostock.de" }
]
readme = "README.md"
requires-python = "^3.10,<3.14"

dependencies = [
  "numpy >=1.24",
  "pyqt5 ==5.15.10",
  "matplotlib >=3.7",
  "scipy >=1.11",
  "SciencePlots >=1.0",
  "pint >=0.21"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
ipython = "^8.32.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
