[project]
name = "XRTSCalib"
version = "0.1.0"
description = "A simple GUI tool for creating dispersion curves for your favorite spectrometer from a set of calibration spectra."
authors = [
  { name = "Samuel Schumacher", email = "samuel.schumacher@uni-rostock.de" }
]
readme = "README.md"
requires-python = "^3.10,<3.14"

dependencies = [
  "numpy (>=2.2.4)",
  "pyqt5 ==5.15.10",
  "matplotlib (>=3.10.1)",
  "scipy (>=1.15.2)",
  "SciencePlots (>=2.1.1)",
  "pint (>=0.24.4)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^24.10.0"
flake8 = "^7.1.2"
ipython = "^8.34.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
